chart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp
spec:
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
    - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  - to:
    - ipBlock:
        cidr: 213.180.193.243/32
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
#  - to:
#    - ipBlock:
#        cidr: 0.0.0.0/0
#        except:
#        - 10.0.0.0/8
